--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
         with:
           terraform_version: 1.9.6
 
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
+
       - name: Terrafoem format
         run: terraform fmt
 
@@ -49,6 +53,7 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan
@@ -74,6 +79,7 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: ./terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
