--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: AWS from Github
 
 on:
@@ -8,11 +7,11 @@ on:
     branches: [main]
 
 env:
-  AWS_REGION : eu-north-1
+  AWS_REGION: eu-north-1
 
 permissions:
-      id-token: write
-      contents: read
+  id-token: write
+  contents: read
 
 jobs:
   terraform-check:
@@ -25,7 +24,7 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.6
-      
+
       - name: Terraform format
         run: terraform fmt -check
         working-directory: ./terraform
@@ -46,15 +45,15 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: eu-north-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
 
       - name: Terraform Plan
-        run: terraform plan
-
+        run: terraform plan -out=tfplan
+        working-directory: ./terraform
 
   terraform-apply:
     runs-on: ubuntu-latest
@@ -72,11 +71,12 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: eu-north-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve tfplan
+        working-directory: ./terraform
