--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           terraform_version: 1.9.6
 
       - name: Terraform format
-        run: terraform fmt -check
+        run: terraform fmt -recursive
         working-directory: ./terraform
 
   terraform-plan:
